force-app/main/default/objects/pse__Project_Task__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Fill only when the task is a Sales or PresSales Task in the Sales Presales Project</inlineHelpText>
    <label>PreSales Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>