force-app/main/default/objects/pse__Project_Task__c/fields/CC_Estimated_vs_Reported__c.field-meta.xml
<CustomField>
    <fullName>CC_Estimated_vs_Reported__c</fullName>
    <formula>pse__Actual_Hours__c / pse__Estimated_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Estimated vs Reported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>