force-app/main/default/objects/pse__Project_Task__c/fields/CC_Task_Code__c.field-meta.xml
<CustomField>
    <fullName>CC_Task_Code__c</fullName>
    <externalId>true</externalId>
    <label>CC_Task_Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>